# cedar-spec

./: .gitignore  Dockerfile  FUZZING_GUIDE.md  llm_compiler.py
cedar-drt/: Cargo.toml
cedar-drt/fuzz/: Cargo.toml
cedar-drt/fuzz/failures/compiler/fail_mismatch_1772075196158/: entities.json  test.json
cedar-drt/fuzz/failures/compiler/fail_mismatch_1772075211594/: policy.cedar
cedar-drt/fuzz/failures/compiler/fail_mismatch_1772094133583/: entities.json
cedar-drt/fuzz/failures/compiler/fail_mismatch_1772120674526/: policy.cedar  test.json
cedar-drt/fuzz/failures/compiler/fail_mismatch_1772127561879/: test.json
cedar-drt/fuzz/failures/compiler/fail_mismatch_1772127764223/: entities.json
cedar-drt/fuzz/failures/compiler/fail_mismatch_1772127823671/: entities.json
cedar-drt/fuzz/failures/compiler/fail_mismatch_1772127865713/: policy.cedar
cedar-drt/fuzz/fuzz_targets/: abac-compiler.rs
cedar-drt/src/: compiler_engine.rs  lib.rs  tests.rs
cedar-drt/tests/: replay_compiler_failures.rs
cedar-policy-compiler/: Cargo.toml  README.md  claude-env.sh  otel-collector-config.yaml  prompt.md  start-otel.sh
cedar-policy-compiler/src/: asm.rs  codegen.rs  helpers.rs  layout.rs  lib.rs  mem.rs  runtime.rs
